ontol/ontol-compiler/test-cases/error/repr/disjoint_intersection1.on
def meters (rel* is: number)

def my_length ( // ERROR intersection of disjoint types
    rel* is: meters // NOTE base type is `ontol.number`
    rel* is: text // NOTE base type is `ontol.text`
)
